--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
                 slides: [
                     { image: 'slide1-1.jpg', audio: 'audio1-1.mp3' },
                     { image: 'slide1-2.jpg', audio: 'audio1-2.mp3' },
-                    { image: 'slide1-3.jpg', audio: 'audio1-3.mp3' }
+                    { image: 'slide1-3.jpg', audio: 'audio1-3.mp3' },
+					{ image: 'slide1-4.jpg', audio: 'audio1-4.mp3' }
                 ],
                 destination: 'https://cuberum.github.io/keyboard/'
             },
